--- a/review.css
+++ b/review.css
@@ -1,45 +1,37 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-.main-page{
-background-color: rgb(5, 5, 5);
-background-size: cover;
-width: 100%;
-position:relative
+
+.reviewpage {
+    background-color: rgb(44, 42, 42);
+    background-size: cover;
+    width: 100%;
+    position: relative
 }
-.slides{
+
+.reviews {
     position: relative;
     width: 100%;
     display: none;
     text-align: center;
     color: white;
     font-size: 20px;
-    height:131vh;
-padding-top: 15%;
-    }
+    height: 130vh;
+    padding-top: 15%;
+    font-weight: 200;
+}
+
 .icon {
     display: flex;
     gap: 800px;
-    margin-top:30% ;
+    margin-top: 30%;
     margin-left: 23%;
     position: absolute;
-     z-index :2;
+    z-index: 2;
 }
-/* .navigation ul{
-    list-style-type: none;
-    border: none;
-background-color: rgb(31, 30, 30);
-border-radius: 40px;
-padding:30px;
-margin-bottom: 1px;
-gap: 5%;
-display: flex;
-cursor: pointer;
-width: 40%;
-} */
 
-.navbar{
+.navbar {
     color: white;
     position: absolute;
     margin-top: -38%;
@@ -51,26 +43,30 @@ width: 40%;
     text-align: center;
     width: 40%;
     margin-left: 30%;
-   
-    
+
+
 }
-.navbar a{
+
+.navbar a {
     color: gray;
     text-decoration: none;
-    
-    
+
+
 }
-.insidebar{
+
+.insidebar {
     margin-left: 10%;
     display: flex;
     gap: 25px;
 }
-.insidebar button{
+
+.insidebar button {
     background-color: black;
     color: white;
 
 }
-#reservation{
+
+#reservation {
     border: 2px;
     padding: 20px;
     background-color: darkgray;
@@ -78,45 +74,37 @@ width: 40%;
 }
 
 
-body{
+body {
     overflow: hidden;
 }
-#left-quote{
-color:rgb(218, 42, 42);
-font-size: 50px;
-top:45%;
-   left: 80%;
-  position: absolute;
+
+#left-quote {
+
+    font-size: 50px;
+    top: 60%;
+    left: 80%;
+    position: absolute;
+    color: red;
 }
-#right-quote{
-    color: rgb(218, 42, 42);
-    margin-top:17%;
+
+#right-quote {
+
+    margin-top: 17%;
     font-size: 50px;
     position: absolute;
     margin-left: 19%;
-    z-index:2;
+    z-index: 2;
+    color: red;
 }
-#logo{
-    margin-top:2% ;
+
+.logo {
+    margin-top: 2%;
     margin-left: 43%;
     position: absolute;
-     z-index :2;
+    z-index: 2;
 }
-.navigation a:hover{
+
+.navigation a:hover {
     padding: 5px;
     background-color: rgb(114, 111, 111);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
