--- a/style.css
+++ b/style.css
@@ -77,3 +77,17 @@
 body{
     overflow: hidden;
 }
+@media only screen and(max-width:1000){
+
+.page{
+    display: none;
+    position: absolute;
+
+}
+.logo{
+    position: absolute;
+    text-align: center;
+    /* margin-top: -10%; */
+    margin-left: 30%;
+}
+}
